--- a/inst/book/introducao.qmd
+++ b/inst/book/introducao.qmd
@@ -16,7 +16,7 @@ Captcha (*Completely Automated Public Turing test to tell Computers and Humans A
 
 Um Captcha pode ser classificado como uma variação do teste de Turing [@turing2009]. A diferença no caso do Captcha é que a avaliação da humanidade do agente é feita por um robô ao invés de uma pessoa -- por isso o termo *automated*. Em algumas situações, Captchas também podem ser entendidos como **testes de Turing reversos**, apesar dos autores originais afastarem essa caracterização [@vonahnTellingHumansComputers2002].
 
-Captchas estão presentes em toda a internet. Inicialmente criados para prevenir *spam* (*Sending and Posting Advertisement in Mass*), os desafios se tornaram populares rapidamente [@vonahnReCAPTCHAHumanBasedCharacter2008], sendo utilizados como forma de evitar evitar o uso indevido de aplicações da *web*. Algumas ações que os desafios podem ajudar a evitar são:
+Captchas estão presentes em toda a internet. Inicialmente criados para prevenir *spam* (*Sending and Posting Advertisement in Mass*), os desafios se tornaram populares rapidamente [@vonahnReCAPTCHAHumanBasedCharacter2008], sendo utilizados como forma de evitar o uso indevido de aplicações da *web*. Algumas ações que os desafios podem ajudar a evitar são:
 
 -   Criação de contas falsas nos sites.
 -   Envio automático de mensagens, via *email* ou formulários de contato.
@@ -35,15 +35,15 @@ A Constituição Federal de 1988 (CF), em seu [inciso XXXIII do art. 5º](https:
 
 A LAI, apesar de trazer diversos benefícios à sociedade, tem dois problemas. O primeiro é o **esforço**: tanto a pessoa/órgão que solicita os dados, quanto o órgão que retorna os dados precisam trabalhar para disponibilizar as informações, sendo necessário deslocar equipes para realizar os levantamentos pedidos. O segundo é o **formato**: os dados enviados como resultado de pedidos de LAI podem chegar em formatos inadequados para consumo da solicitante, muitas vezes em *Portable Document Format* (PDF), que dificulta a leitura e análise dos dados [@michener2015, pág. 55]; além disso, como o levantamento é realizado de forma individualizada, o mesmo pedido feito em diferentes períodos (e.g. uma atualização mensal dos dados) pode vir em formatos diferentes, dificultando a leitura e arrumação dos dados.
 
-Uma forma eficiente de evitar os problemas de esforço e formato em pedidos de LAI é disponibilizar os dados de **forma aberta**. Como definido pela *Open Knowledge Foundation* (OKFN), a base de dados "deve ser fornecida em uma forma conveniente e modificável isento de obstáculos tecnológicos desnecessários para a realização dos direitos licenciados. Especificamente, os dados devem ser legíveis por máquina, disponíveis em todo o seu volume, e fornecidos em um formato aberto (ou seja, um formato com sua especificação livremente disponível, e publicada sem qualquer restrições, monetárias ou não, da sua utilização) ou, no mínimo, podem ser processados com pelo menos uma ferramenta de software livre e gratuita."[^okfn]
+Uma forma eficiente de evitar os problemas de esforço e formato em pedidos de LAI é disponibilizar os dados de **forma aberta**. Como definido pela *Open Knowledge Foundation* (OKFN), a base de dados "deve ser fornecida em uma forma conveniente e modificável isento de obstáculos tecnológicos desnecessários para a realização dos direitos licenciados. Especificamente, os dados devem ser legíveis por máquina, disponíveis em todo o seu volume, e fornecidos em um formato aberto (ou seja, um formato com sua especificação livremente disponível, e publicada sem quaisquer restrições, monetárias ou não, da sua utilização) ou, no mínimo, podem ser processados com pelo menos uma ferramenta de software livre e gratuita."[^okfn]
 
 [^okfn]: Link: <https://okfn.org/opendata/>. Último acesso em 01/11/2022.
 
 As vantagens ao disponibilizar dados públicos de forma aberta para a sociedade é um tema pacífico na comunidade científica [@murray-rust2008]. No Brasil, existem plataformas dedicadas à abertura de dados governamentais, como o [dados.gov.br](https://dados.gov.br). No entanto, existem diversos dados públicos que ainda não estão disponíveis de forma aberta.
 
-A dificuldade de acesso é particularmente evidente no Poder Judiciário, que além de não disponibilizar um portal de dados abertos, impõe barreiras aos pedidos de acesso à informação por utilizar diversos sistemas para armazenar os dados. Por exemplo, para pedir uma lista de todos os processos judiciais relacionados a recuperação judicial de empresas, as únicas alternativas são i) pedir os dados ao Conselho Nacional de Justiça (CNJ), que não possui informações suficientes para obter a lista[^introducao-1] ou ii) expedir ofícios aos 27 Tribunais Estaduais. Cada tribunal apresentaria diferentes opções e critérios de acesso aos dados, diferentes prazos para atendimento e diferentes formatos, podendo, inclusive, negar o pedido de acesso.
+A dificuldade de acesso é particularmente evidente no Poder Judiciário, que além de não disponibilizar um portal de dados abertos, impõe barreiras aos pedidos de acesso à informação por utilizar diversos sistemas para armazenar os dados. Por exemplo, para pedir uma lista de todos os processos judiciais relacionados à recuperação judicial de empresas, as únicas alternativas são i) pedir os dados ao Conselho Nacional de Justiça (CNJ), que não possui informações suficientes para obter a lista[^introducao-1] ou ii) expedir ofícios aos 27 Tribunais Estaduais. Cada tribunal apresentaria diferentes opções e critérios de acesso aos dados, diferentes prazos para atendimento e diferentes formatos, podendo, inclusive, negar o pedido de acesso.
 
-[^introducao-1]: O CNJ só consegue listar os processos relacionados a um tema a partir da definição de Classes e Assuntos, disponíveis nas [Sistema de Gestão de Tabelas (SGT) do CNJ](https://www.cnj.jus.br/sgt/consulta_publica_classes.php). Processos relacionados a recuperação judicial, no entanto, não respeitam a taxonomia do SGT [@observat].
+[^introducao-1]: O CNJ só consegue listar os processos relacionados a um tema a partir da definição de Classes e Assuntos, disponíveis no [Sistema de Gestão de Tabelas (SGT) do CNJ](https://www.cnj.jus.br/sgt/consulta_publica_classes.php). Processos relacionados a recuperação judicial, no entanto, não respeitam a taxonomia do SGT [@observat].
 
 A dificuldade para acessar os dados do judiciário é a principal barreira para realização de pesquisas pela Associação Brasileira de Jurimetria (ABJ), empresa na qual o autor desta tese trabalha. A entidade tem como missão principal realizar estudos empíricos para implementar políticas públicas utilizando dados do judiciário.
 
@@ -59,13 +59,13 @@ O problema é que utilizar Captchas não impede o acesso automatizado. As empres
 
 Utilizar Captchas também é uma solução ineficiente. Do ponto de vista técnico, a solução mais eficiente para disponibilizar os dados é através de ferramentas de dados abertos como o [*Comprehensive Knowledge Archive Network* (CKAN)](https://ckan.org/). Ao disponibilizar os dados de forma aberta, as consultas automatizadas ficariam isoladas dos sites de consulta pública, o que garantiria o acesso das pessoas sem problemas de indisponibilidade.
 
-Não é só quem faz pesquisa com dados públicos que o uso de Captchas pode ser prejudicial. No mercado, existem serviços de resolução de Captchas que utilizam mão de obra humana, em regimes que pagam muito menos do que um salário mínimo a 8 horas de trabalho. Um exemplo é o 2Captcha[^introducao-2], que funciona como um Uber dos Captchas: o algoritmo automatizado envia o Captcha para a plataforma, que é acessado e resolvido por uma pessoa, retornando a solução para o algoritmo. O 2Captcha é operado pela ALTWEB LLC-FZ, uma empresa com base em Dubai[^base-2captcha].
+Não é só quem faz pesquisa com dados públicos que o uso de Captchas pode ser prejudicial. No mercado, existem serviços de resolução de Captchas que utilizam mão de obra humana, em regimes que pagam muito menos do que um salário-mínimo a 8 horas de trabalho. Um exemplo é o 2Captcha[^introducao-2], que funciona como um Uber dos Captchas: o algoritmo automatizado envia o Captcha para a plataforma, que é acessado e resolvido por uma pessoa, retornando a solução para o algoritmo. O 2Captcha é operado pela ALTWEB LLC-FZ, uma empresa com base em Dubai[^base-2captcha].
 
 [^introducao-2]: [Link do 2Captcha](https://2captcha.com/make-money-online). Último acesso em 01/11/2022.
 
 [^base-2captcha]: [Link dos termos de serviço do 2Captcha](https://2captcha.com/terms-of-service). Último acesso em 01/11/2022.
 
-Segundo o site, o valor pago pelo 2Captcha é de US\$ 0,5 para 1 a 2 horas de trabalho. No regime da Consolidação das Leis do Trabalho ([Decreto-Lei 5.452/1943](https://www.planalto.gov.br/ccivil_03/decreto-lei/del5452.htm), CLT) as horas mensais de trabalho são 220. Trabalhando continuamente no 2Captcha, isso daria um salário de 55 a 110 dólares por mês, valor bem abaixo do salário mínimo do Brasil, que no ano de 2022 era de R\$ 1.100,00[^introducao-3], mesmo considerando os valores mais altos de taxa de câmbio. Ou seja, os serviços públicos acabam, indiretamente, incentivando um mercado que paga abaixo do salário mínimo. Luis von Ahn, um dos criadores dos Captchas, define o 2Captcha como um *sweatshop*, um termo utilizado para caracterizar empresas que têm condições de trabalho inaceitáveis.
+Segundo o site, o valor pago pelo 2Captcha é de US\$ 0,5 para 1 a 2 horas de trabalho. No regime da Consolidação das Leis do Trabalho ([Decreto-Lei 5.452/1943](https://www.planalto.gov.br/ccivil_03/decreto-lei/del5452.htm), CLT) as horas mensais de trabalho são 220. Trabalhando continuamente no 2Captcha, isso daria um salário de 55 a 110 dólares por mês, valor bem abaixo do salário-mínimo do Brasil, que no ano de 2022 era de R\$ 1.100,00[^introducao-3], mesmo considerando os valores mais altos de taxa de câmbio. Ou seja, os serviços públicos acabam, indiretamente, incentivando um mercado que paga abaixo do salário-mínimo. Luis von Ahn, um dos criadores dos Captchas, define o 2Captcha como um *sweatshop*, um termo utilizado para caracterizar empresas que têm condições de trabalho inaceitáveis.
 
 [^introducao-3]: Fonte: [IPEA](http://www.ipeadata.gov.br/exibeserie.aspx?stub=1&serid1739471028=1739471028). Último acesso em 01/11/2022.
 
@@ -83,7 +83,7 @@ O relatório técnico de @vonahnTellingHumansComputers2002 não foi o primeiro a
 
 Os artigos mais conhecidos de introdução aos Captchas são @vonahnCaptchaTellingHumans2003 e @vonahnTellingHumansComputers2004. O conteúdo dos trabalhos é o mesmo, sendo o primeiro deles na forma de apresentação e o segundo na forma de relatório. Um detalhe interessante é a ênfase dos autores no termo *Public* dos Captchas, mostrando a preocupação em manter os códigos públicos.
 
-Os autores também defendem que o Captcha é uma forma de fazer com que pessoas mal intencionadas contribuam com os avanços da inteligência artificial. Se uma pessoa (ainda que mal intencionada) resolve um Captcha e publica essa solução, isso significa que a comunidade científica avançou na área de inteligência artificial.
+Os autores também defendem que o Captcha é uma forma de fazer com que pessoas mal-intencionadas contribuam com os avanços da inteligência artificial. Se uma pessoa (ainda que mal-intencionada) resolve um Captcha e publica essa solução, isso significa que a comunidade científica avançou na área de inteligência artificial.
 
 Não demorou para surgirem os primeiros resolvedores de Captchas[^introducao-4]. @mori2003a foi um dos primeiros trabalhos publicados sobre o tema e utiliza diversas técnicas de processamento de imagens para obter os rótulos corretos. Também não demorou para a comunidade científica perceber que redes neurais eram úteis nesse contexto [@chellapilla2004]. No artigo de 2004, Chellapilla e Simard desenvolvem um algoritmo baseado em heurísticas para segmentar a imagem e redes neurais para identificar as imagens individuais.
 
@@ -91,7 +91,7 @@ Não demorou para surgirem os primeiros resolvedores de Captchas[^introducao-4].
 
 A partir desse ponto, foi iniciada uma luta entre geradores e resolvedores de Captchas. Do lado dos geradores, as pessoas envolvidas foram tanto acadêmicos tentando desenvolver desafios cada vez mais difíceis para avançar na pesquisa em inteligência artificial, quanto empresas de tecnologia tentando se proteger contra robôs sofisticados. Do lado dos resolvedores, as pessoas envolvidas foram tanto acadêmicos tentando desenvolver novas técnicas para avançar nos modelos de reconhecimento de imagens, quanto *spammers* buscando novas formas de realizar ataques cibernéticos.
 
-Uma das pessoas envolvidas com geradores de Captchas mais conhecidas é Luis von Ahn, um dos criadores do artigo original do Captcha. Um pedaço da história dos Captchas está disponível nos primeiros cinco minutos de sua entrevista em um programa britânico chamado *Spark*[^introducao-5]. Na entrevista, Von Ahn conta um pouco sobre origem dos Captchas em Carnegie Mellon, contando que ficou frustrado com o fato das pessoas perderem tempo de inteligência humana ao resolver Captchas, o que deu origem ao reCaptcha. Outro vídeo instrutivo é uma palestra de Von Ahn na *Thinking Digital Conference* sobre a história do reCaptcha[^introducao-6]. Segundo ele, a *startup* foi criada em maio de 2007[^introducao-7], depois de Von Ahn verificar que aproximadamente 200 milhões de Captchas eram resolvidos diariamente.
+Uma das pessoas envolvidas com geradores de Captchas mais conhecidas é Luis von Ahn, um dos criadores do artigo original do Captcha. Um pedaço da história dos Captchas está disponível nos primeiros cinco minutos de sua entrevista em um programa britânico chamado *Spark*[^introducao-5]. Na entrevista, Von Ahn conta um pouco sobre origem dos Captchas em Carnegie Mellon, contando que ficou frustrado com o fato de as pessoas perderem tempo de inteligência humana ao resolver Captchas, o que deu origem ao reCaptcha. Outro vídeo instrutivo é uma palestra de Von Ahn na *Thinking Digital Conference* sobre a história do reCaptcha[^introducao-6]. Segundo ele, a *startup* foi criada em maio de 2007[^introducao-7], depois de Von Ahn verificar que aproximadamente 200 milhões de Captchas eram resolvidos diariamente.
 
 [^introducao-5]: Spark, 2011. [Link no Web Archive]( https://web.archive.org/web/20120603142110/http://www.cbc.ca/spark/2011/11/full-interview-luis-von-ahn-on-duolingo/). Último acesso em 01/11/2022.
 
@@ -127,7 +127,7 @@ O reCaptcha v2 também foi usado para gerar novas bases de dados para a Google, 
 
 Com o advento do reCaptcha v2, a pergunta de interesse dos resolvedores de Captcha passou a ser: como criar modelos que funcionam razoavelmente bem sem a necessidade de anotar muitas imagens? Se esse desafio fosse resolvido, dois avanços aconteceriam: i) um grande avanço na inteligência artificial, especificamente na área de visão computacional, e ii) uma nova forma de vencer a luta de geradores e resolvedores.
 
-Até o momento de escrita da tese, não existia um modelo geral que resolvesse com alta acurácia todos os desafios colocados pelo reCaptcha v2 e seus concorrentes. No entanto, vários avanços apareceram no sentido de reduzir a quantidade de imagens anotadas para criar candidatos a resolvedores. Dentre eles, o mais significativos são os baseados nas redes generativas adversariais (*Generative Adversarial Networks,* ou GANs), propostas no famoso trabalho de @goodfellowGenerativeAdversarialNetworks2014. O primeiro trabalho que utiliza modelos generativos no contexto de Captchas mostrou uma redução de 300x na quantidade de dados anotados necessária para resolver um Captcha [@george2017].  Nesse caso, os autores propõem uma rede diferente do GAN, chamada *Recursive Cortical Network*, ou RCN. Outros trabalhos mais recentes [@ye2018; @wang2021] avançam ainda mais na pesquisa, reduzindo o trabalho de classificação para um novo Captcha de texto para aproximadamente 2 horas.
+Até o momento de escrita da tese, não existia um modelo geral que resolvesse com alta acurácia todos os desafios colocados pelo reCaptcha v2 e seus concorrentes. No entanto, vários avanços apareceram no sentido de reduzir a quantidade de imagens anotadas para criar candidatos a resolvedores. Dentre eles, os mais significativos são os baseados nas redes generativas adversariais (*Generative Adversarial Networks,* ou GANs), propostas no famoso trabalho de @goodfellowGenerativeAdversarialNetworks2014. O primeiro trabalho que utiliza modelos generativos no contexto de Captchas mostrou uma redução de 300x na quantidade de dados anotados necessários para resolver um Captcha [@george2017].  Nesse caso, os autores propõem uma rede diferente do GAN, chamada *Recursive Cortical Network*, ou RCN. Outros trabalhos mais recentes [@ye2018; @wang2021] avançam ainda mais na pesquisa, reduzindo o trabalho de classificação para um novo Captcha de texto para aproximadamente 2 horas.
 
 Mas foi em 2018, com o reCaptcha v3, que a Google fez um passo definitivo. Com a nova versão, as verificações do navegador *web* passaram a ser muito mais poderosas, sendo raros os casos em que o site fica em dúvidas se a pessoa é ou não um robô. Versões mais recentes, como o reCaptcha *Enterprise*, de 2020, ainda permitem que as mantenedoras os sites façam o ajuste fino de modelos de detecção de robôs. Dessa forma, desafios de reconhecimento de texto e objetos em imagens perderam a importância.
 
@@ -149,7 +149,7 @@ Modelos de aprendizagem profunda usuais podem ser sensíveis a perturbações pe
 
 Avanços em técnicas de regularização fazem com que o modelo seja menos afetado por mudanças nos desafios gerados. Uma técnica de regularização que ajuda na capacidade de generalização é a aumentação de dados com adição de ruídos [@noh2017]. No entanto, nenhuma técnica garante que o modelo terá excelentes resultados em novos desafios.
 
-Outra alternativa é desenvolver modelos que aprendem com poucos dados anotados. Como comentado anteriormente, GANs e modelos relacionados podem apresentar bons resultados na resolução de tarefas de imagens, mesmo com uma base de dados pequena. Nesse sentido, ainda que um site mude seu Captcha, é possível ajustar um modelo que resolve esse Captcha sem a necessidade de anotar muitos exemplos para construir uma nova base de treino.
+Uma alternativa é desenvolver modelos que aprendem com poucos dados anotados. Como comentado anteriormente, GANs e modelos relacionados podem apresentar bons resultados na resolução de tarefas de imagens, mesmo com uma base de dados pequena. Nesse sentido, ainda que um site mude seu Captcha, é possível ajustar um modelo que resolve esse Captcha sem a necessidade de anotar muitos exemplos para construir uma nova base de treino.
 
 Nessa tese, apresenta-se uma nova técnica para resolver Captchas com poucas ou nenhuma imagem anotada, chamada *Web Automatic Weak Learning* (WAWL). A técnica alia técnicas de raspagem de dados com técnicas de aprendizado fracamente supervisionado, especificamente o aprendizado com rótulos parciais, explorando uma característica específica dos Captchas, que é a presença de um *oráculo*.
 
@@ -190,11 +190,11 @@ Especificamente, a pesquisa tem como objetivos:
 
 O presente trabalho é relevante para a ciência por três motivos: importância teórica, viabilidade técnica e importância prática. Os pontos são explicados abaixo.
 
-Do ponto de vista teórico, a tese é importante por apresentar uma aplicação muito especial do aprendizado fracamente supervisionado. No caso do Captcha, como a base de dados fracamente supervisionada é virtualmente infinita, trata-se de uma excelente oportunidade para testar novas técnicas e verificar como elas se comportam empiricamente. Os objetivos 1 e 2 estão relacionadas a essa justificativa.
+Do ponto de vista teórico, a tese é importante por apresentar uma aplicação muito especial do aprendizado fracamente supervisionado. No caso do Captcha, como a base de dados fracamente supervisionados é virtualmente infinita, trata-se de uma excelente oportunidade para testar novas técnicas e verificar como elas se comportam empiricamente. Os objetivos 1 e 2 estão relacionados a essa justificativa.
 
-Com relação à viabilidade técnica, o trabalho parte de uma lista de Captchas que já foram resolvidos utilizando técnicas tradicionais aprendizado profundo. Como os Captchas já foram resolvidos previamente, mesmo que a WAWL não apresentasse bons resultados -- e apresenta -- o projeto ainda teria como subprodutos as bases de dados e o pacote computacional disponibilizados abertamente. O objetivo 3 é o que torna a proposta tecnicamente viável.
+Com relação à viabilidade técnica, o trabalho parte de uma lista de Captchas que já foram resolvidos utilizando técnicas tradicionais de aprendizado profundo. Como os Captchas já foram resolvidos previamente, mesmo que a WAWL não apresentasse bons resultados -- e apresenta -- o projeto ainda teria como subprodutos as bases de dados e o pacote computacional disponibilizados abertamente. O objetivo 3 é o que torna a proposta tecnicamente viável.
 
-Finalmente, do ponto de vista prático, Captchas em serviços públicos causam desequilíbrio de mercado e incentivam o uso de serviços com formas de remuneração duvidosas. O objetivo 4 vai de encontro direto com esse problema, ao dispoinibilizar uma ferramenta gratuita e aberta para resolução de Captchas que pode ser utilizada em diversos serviços públicos.
+Finalmente, do ponto de vista prático, Captchas em serviços públicos causam desequilíbrio de mercado e incentivam o uso de serviços com formas de remuneração duvidosas. O objetivo 4 vai de encontro direto com esse problema, ao disponibilizar uma ferramenta gratuita e aberta para resolução de Captchas que pode ser utilizada em diversos serviços públicos.
 
 ## Hipóteses {#sec-hipoteses}
 
