--- a/inst/book/assets/tex/template.tex
+++ b/inst/book/assets/tex/template.tex
@@ -432,6 +432,7 @@ Captchas, or Completely Automated Public Turing tests to tell Computers and Huma
    OCR & Optical Character Recognition\\
    OKFN & Open Knowledge Foundation\\
    PDF & Portable Document Format\\
+   PJe & Processo Judicial eletrônico\\
    PLL & Partial Label Learning\\
    PNG & Portable Network Graphics\\
    RCN & Recursive Cortical Network\\
@@ -462,6 +463,7 @@ Captchas, or Completely Automated Public Turing tests to tell Computers and Huma
    UnB & Universidade de Brasília\\
    Unicamp & Universidade Estadual de Campinas\\
    UNESP & Universidade Estadual de São Paulo\\
+   URL & Uniform Resource Locator\\
    USP & Universidade de São Paulo\\
    WAWL & Web Automatic Weak Learner\\
    XPath & XML Path Language\\
